🟨feat: update benchmark notebook

--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8849dd8e-b940-429f-9579-1a495bac806a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "398f6e11-dbe0-4dba-89a5-dd12d9294bfe",
    "metadata": {},
    "outputs": [],
@@ -59,15 +59,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3da2e47-5410-4c2f-8154-de1427cc987d",
+   "metadata": {},
+   "source": [
+    "# ✅ Uplift на Kevin Hillstrom датасете"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc3491d1-4a0f-488f-9559-f997e2d015b2",
    "metadata": {},
    "source": [
-    "# ✅ Загрузка и обработка Kevin Hillstrom датасета"
+    "## ⭐ Загрузка и обработка Kevin Hillstrom датасета"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6fc791bf-8e9e-4752-a746-1fbe0f03661d",
    "metadata": {},
    "outputs": [],
@@ -84,8 +92,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d72f305-6513-4c1a-b1fe-1de5a051dfad",
+   "metadata": {},
+   "source": [
+    "## ⭐ Выбор лучшей базовой модели"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "900bcf1b-5bb6-4ab5-a3c0-7b89c4b7a66a",
    "metadata": {},
    "outputs": [],
@@ -96,10 +112,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "10758f8e-579a-4061-b552-8def1b5feddd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                     | 0/5 [00:00<?, ?trial/s, best loss=?]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.10/multiprocessing/queues.py:122: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  return _ForkingPickler.loads(res)\n",
+      "/usr/lib/python3.10/multiprocessing/queues.py:122: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  return _ForkingPickler.loads(res)\n",
+      "/usr/lib/python3.10/multiprocessing/queues.py:122: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  return _ForkingPickler.loads(res)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 1/5 [00:04<00:17,  4.28s/trial, best loss: -0.6274522168450039]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.10/multiprocessing/queues.py:122: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  return _ForkingPickler.loads(res)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:13<00:00,  2.78s/trial, best loss: -0.6274522168450039]\n",
+      "100%|███████████| 5/5 [00:23<00:00,  4.72s/trial, best loss: -0.553012915389317]\n",
+      "100%|██████████| 5/5 [00:01<00:00,  4.79trial/s, best loss: -0.6031430900366076]\n",
+      "100%|██████████| 5/5 [00:09<00:00,  1.87s/trial, best loss: -0.6159847855399736]\n",
+      "100%|██████████| 5/5 [01:03<00:00, 12.60s/trial, best loss: -0.6120419386189359]\n"
+     ]
+    }
+   ],
    "source": [
     "log_reg_best = findBestParams(LogisticRegression,\n",
     "                               X_prepared,\n",
@@ -134,16 +196,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "51b2017a-e1d8-4b6b-a204-eb98b2b68e56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# testing\n",
+    "log_reg_best['best_params']['max_iter'] = int(log_reg_best['best_params']['max_iter'])\n",
+    "\n",
+    "knn_best['best_params']['metric'] = knn_best['best_params']['metric'] if\\\n",
+    "                                    knn_best['best_params']['metric'] in\\\n",
+    "                                    {'pyfunc', 'l1', 'mahalanobis', 'minkowski',\n",
+    "                                     'braycurtis', 'l2', 'chebyshev', 'correlation',\n",
+    "                                     'seuclidean', 'sokalmichener', 'hamming', 'precomputed',\n",
+    "                                     'euclidean', 'haversine', 'cosine', 'dice', 'russellrao',\n",
+    "                                     'cityblock', 'sokalsneath', 'yule', 'infinity', 'sqeuclidean',\n",
+    "                                     'manhattan', 'nan_euclidean', 'p', 'canberra',\n",
+    "                                     'rogerstanimoto', 'jaccard'} else 'euclidean'\n",
+    "knn_best['best_params']['weights'] = knn_best['best_params']['weights'] if\\\n",
+    "                                     knn_best['best_params']['weights'] in\\\n",
+    "                                     {'distance', 'uniform'} else 'distance'\n",
+    "\n",
+    "dt_best['best_params']['criterion'] = ['gini', 'entropy'][dt_best['best_params']['criterion']]\n",
+    "dt_best['best_params']['max_depth'] = int(dt_best['best_params']['max_depth'])\n",
+    "\n",
+    "rf_best['best_params']['criterion'] = ['gini', 'entropy'][rf_best['best_params']['criterion']]\n",
+    "rf_best['best_params']['max_depth'] = int(rf_best['best_params']['max_depth'])\n",
+    "rf_best['best_params']['n_estimators'] = int(rf_best['best_params']['n_estimators'])\n",
+    "\n",
+    "cb_best['best_params']['verbose'] = False\n",
+    "\n",
     "models = {\n",
-    "    'LogisticRregressionSklearn': LogisticRegression(),\n",
-    "    'TreeClassifierSklearn': DecisionTreeClassifier(),\n",
-    "    'GradientBoostingCatBoost': CatBoostClassifier(logging_level='Silent')\n",
+    "    'LogisticRregressionSklearn': LogisticRegression(**log_reg_best['best_params']),\n",
+    "    'KNearestSklearn': KNeighborsClassifier(**knn_best['best_params']),\n",
+    "    'TreeClassifierSklearn': DecisionTreeClassifier(**dt_best['best_params']),\n",
+    "    'RandomForestSklearn': RandomForestClassifier(**rf_best['best_params']),\n",
+    "    'GradientBoostingCatBoost': CatBoostClassifier(**cb_best['best_params'])\n",
     "}\n",
     "\n",
     "res = baseModelSelection(models, X_prepared, y_prepared)"
@@ -151,10 +238,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "436a250f-b85e-4e04-9a6f-67c8b84176e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>fit_time</th>\n",
+       "      <th>score_time</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>test_roc_auc</th>\n",
+       "      <th>test_f1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KNearestSklearn</td>\n",
+       "      <td>0.014280</td>\n",
+       "      <td>1.490874</td>\n",
+       "      <td>0.847366</td>\n",
+       "      <td>0.553325</td>\n",
+       "      <td>0.017513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TreeClassifierSklearn</td>\n",
+       "      <td>0.040339</td>\n",
+       "      <td>0.011758</td>\n",
+       "      <td>0.853058</td>\n",
+       "      <td>0.599789</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RandomForestSklearn</td>\n",
+       "      <td>1.408738</td>\n",
+       "      <td>0.105025</td>\n",
+       "      <td>0.853058</td>\n",
+       "      <td>0.616623</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LogisticRregressionSklearn</td>\n",
+       "      <td>1.844587</td>\n",
+       "      <td>0.025352</td>\n",
+       "      <td>0.853058</td>\n",
+       "      <td>0.627490</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GradientBoostingCatBoost</td>\n",
+       "      <td>2.564179</td>\n",
+       "      <td>0.018314</td>\n",
+       "      <td>0.853036</td>\n",
+       "      <td>0.613629</td>\n",
+       "      <td>0.001819</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   model_name  fit_time  score_time  test_accuracy  \\\n",
+       "1             KNearestSklearn  0.014280    1.490874       0.847366   \n",
+       "2       TreeClassifierSklearn  0.040339    0.011758       0.853058   \n",
+       "3         RandomForestSklearn  1.408738    0.105025       0.853058   \n",
+       "0  LogisticRregressionSklearn  1.844587    0.025352       0.853058   \n",
+       "4    GradientBoostingCatBoost  2.564179    0.018314       0.853036   \n",
+       "\n",
+       "   test_roc_auc   test_f1  \n",
+       "1      0.553325  0.017513  \n",
+       "2      0.599789  0.000000  \n",
+       "3      0.616623  0.000000  \n",
+       "0      0.627490  0.000000  \n",
+       "4      0.613629  0.001819  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res"
    ]
@@ -164,7 +351,7 @@
    "id": "d5670de2-3025-4e71-803f-acd74fb33f31",
    "metadata": {},
    "source": [
-    "# ✅ Протестируем Scikit-uplifts"
+    "## ⭐ Протестируем Scikit-uplifts"
    ]
   },
   {
@@ -274,7 +461,7 @@
    "id": "6a6b7ab5-8665-4816-85f3-b4551e53a6ea",
    "metadata": {},
    "source": [
-    "# ✅ Протестируем Causal-ML"
+    "## ⭐ Протестируем Causal-ML"
    ]
   },
   {
