🟨feat: added models saving

--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -26,6 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import pickle\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -139,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 1/5 [00:04<00:17,  4.28s/trial, best loss: -0.6274522168450039]"
+      " 20%|██        | 1/5 [00:04<00:18,  4.64s/trial, best loss: -0.6274522168450039]"
      ]
     },
     {
@@ -154,11 +157,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:13<00:00,  2.78s/trial, best loss: -0.6274522168450039]\n",
-      "100%|███████████| 5/5 [00:23<00:00,  4.72s/trial, best loss: -0.553012915389317]\n",
-      "100%|██████████| 5/5 [00:01<00:00,  4.79trial/s, best loss: -0.6031430900366076]\n",
-      "100%|██████████| 5/5 [00:09<00:00,  1.87s/trial, best loss: -0.6159847855399736]\n",
-      "100%|██████████| 5/5 [01:03<00:00, 12.60s/trial, best loss: -0.6120419386189359]\n"
+      "100%|██████████| 5/5 [00:13<00:00,  2.80s/trial, best loss: -0.6274522168450039]\n",
+      "100%|███████████| 5/5 [00:22<00:00,  4.52s/trial, best loss: -0.553012915389317]\n",
+      "100%|██████████| 5/5 [00:01<00:00,  4.71trial/s, best loss: -0.6031430900366076]\n",
+      "100%|██████████| 5/5 [00:09<00:00,  1.98s/trial, best loss: -0.6159847855399736]\n",
+      "100%|██████████| 5/5 [01:04<00:00, 12.96s/trial, best loss: -0.6120419386189359]\n"
      ]
     }
    ],
@@ -169,11 +172,17 @@
     "                               Spaces.log_reg_hp_space\n",
     "                              )\n",
     "\n",
+    "with open('saved_models/best_base/log_reg.pkl', 'wb') as f:\n",
+    "    pickle.dump(log_reg_best, f)\n",
+    "\n",
     "knn_best = findBestParams(KNeighborsClassifier,\n",
     "                               X_prepared,\n",
     "                               y_prepared,\n",
     "                               Spaces.knn_hp_space\n",
     "                              )\n",
+    "\n",
+    "with open('saved_models/best_base/knn.pkl', 'wb') as f:\n",
+    "    pickle.dump(knn_best, f)\n",
     "\n",
     "dt_best = findBestParams(DecisionTreeClassifier,\n",
     "                               X_prepared,\n",
@@ -181,17 +190,26 @@
     "                               Spaces.dt_hp_space\n",
     "                              )\n",
     "\n",
+    "with open('saved_models/best_base/dt.pkl', 'wb') as f:\n",
+    "    pickle.dump(dt_best, f)\n",
+    "\n",
     "rf_best = findBestParams(RandomForestClassifier,\n",
     "                               X_prepared,\n",
     "                               y_prepared,\n",
     "                               Spaces.rf_hp_space\n",
     "                              )\n",
     "\n",
+    "with open('saved_models/best_base/rf.pkl', 'wb') as f:\n",
+    "    pickle.dump(rf_best, f)\n",
+    "\n",
     "cb_best = findBestParams(CatBoostClassifier,\n",
     "                               X_prepared,\n",
     "                               y_prepared,\n",
     "                               Spaces.cb_hp_space\n",
-    "                              )"
+    "                              )\n",
+    "\n",
+    "with open('saved_models/best_base/cb.pkl', 'wb') as f:\n",
+    "    pickle.dump(cb_best, f)"
    ]
   },
   {
@@ -201,6 +219,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('saved_models/best_base/log_reg.pkl', 'rb') as f:\n",
+    "    log_reg_best = pickle.load(f)\n",
+    "\n",
+    "with open('saved_models/best_base/knn.pkl', 'rb') as f:\n",
+    "    knn_best = pickle.load(f)\n",
+    "\n",
+    "with open('saved_models/best_base/dt.pkl', 'rb') as f:\n",
+    "    dt_best = pickle.load(f)\n",
+    "\n",
+    "with open('saved_models/best_base/rf.pkl', 'rb') as f:\n",
+    "    rf_best = pickle.load(f)\n",
+    "\n",
+    "with open('saved_models/best_base/cb.pkl', 'rb') as f:\n",
+    "    cb_best = pickle.load(f)\n",
+    "\n",
     "log_reg_best['best_params']['max_iter'] = int(log_reg_best['best_params']['max_iter'])\n",
     "\n",
     "knn_best['best_params']['metric'] = knn_best['best_params']['metric'] if\\\n",
