🟨feat: finilize sklift scoring on Hilstrom

--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -44,6 +44,7 @@
     "\n",
     "from sklift.models import SoloModel\n",
     "from sklift.models import TwoModels\n",
+    "from sklift.models import ClassTransformation\n",
     "from sklift.metrics import uplift_at_k\n",
     "from sklift.datasets import fetch_hillstrom\n",
     "\n",
@@ -52,7 +53,7 @@
     "\n",
     "from upninja.pipelines import DataTransformers\n",
     "from upninja.pipelines import BasePipeline\n",
-    "from upninja.utils.Score import upliftComparingHist, scoreUpliftAtK\n",
+    "from upninja.utils.Score import upliftComparingHist, scoreUpliftAtK, scorePipelines\n",
     "from upninja.models import findBestParams, baseModelSelection\n",
     "from upninja.models import Spaces\n",
     "\n",
@@ -308,8 +309,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>KNearestSklearn</td>\n",
-       "      <td>0.014280</td>\n",
-       "      <td>1.490874</td>\n",
+       "      <td>0.020627</td>\n",
+       "      <td>1.482143</td>\n",
        "      <td>0.847366</td>\n",
        "      <td>0.553325</td>\n",
        "      <td>0.017513</td>\n",
@@ -317,8 +318,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>TreeClassifierSklearn</td>\n",
-       "      <td>0.040339</td>\n",
-       "      <td>0.011758</td>\n",
+       "      <td>0.042022</td>\n",
+       "      <td>0.012076</td>\n",
        "      <td>0.853058</td>\n",
        "      <td>0.599789</td>\n",
        "      <td>0.000000</td>\n",
@@ -326,17 +327,17 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>RandomForestSklearn</td>\n",
-       "      <td>1.408738</td>\n",
-       "      <td>0.105025</td>\n",
+       "      <td>1.395977</td>\n",
+       "      <td>0.103046</td>\n",
        "      <td>0.853058</td>\n",
-       "      <td>0.616623</td>\n",
+       "      <td>0.615059</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>LogisticRregressionSklearn</td>\n",
-       "      <td>1.844587</td>\n",
-       "      <td>0.025352</td>\n",
+       "      <td>1.865285</td>\n",
+       "      <td>0.024664</td>\n",
        "      <td>0.853058</td>\n",
        "      <td>0.627490</td>\n",
        "      <td>0.000000</td>\n",
@@ -344,8 +345,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>GradientBoostingCatBoost</td>\n",
-       "      <td>2.564179</td>\n",
-       "      <td>0.018314</td>\n",
+       "      <td>2.844391</td>\n",
+       "      <td>0.021228</td>\n",
        "      <td>0.853036</td>\n",
        "      <td>0.613629</td>\n",
        "      <td>0.001819</td>\n",
@@ -356,16 +357,16 @@
       ],
       "text/plain": [
        "                   model_name  fit_time  score_time  test_accuracy  \\\n",
-       "1             KNearestSklearn  0.014280    1.490874       0.847366   \n",
-       "2       TreeClassifierSklearn  0.040339    0.011758       0.853058   \n",
-       "3         RandomForestSklearn  1.408738    0.105025       0.853058   \n",
-       "0  LogisticRregressionSklearn  1.844587    0.025352       0.853058   \n",
-       "4    GradientBoostingCatBoost  2.564179    0.018314       0.853036   \n",
+       "1             KNearestSklearn  0.020627    1.482143       0.847366   \n",
+       "2       TreeClassifierSklearn  0.042022    0.012076       0.853058   \n",
+       "3         RandomForestSklearn  1.395977    0.103046       0.853058   \n",
+       "0  LogisticRregressionSklearn  1.865285    0.024664       0.853058   \n",
+       "4    GradientBoostingCatBoost  2.844391    0.021228       0.853036   \n",
        "\n",
        "   test_roc_auc   test_f1  \n",
        "1      0.553325  0.017513  \n",
        "2      0.599789  0.000000  \n",
-       "3      0.616623  0.000000  \n",
+       "3      0.615059  0.000000  \n",
        "0      0.627490  0.000000  \n",
        "4      0.613629  0.001819  "
       ]
@@ -389,104 +390,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "59a614c7-90c2-4382-9466-83d4a5e097c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s_learner_model = SoloModel(CatBoostClassifier(logging_level='Silent'))\n",
+    "with open('saved_models/best_base/cb.pkl', 'rb') as f:\n",
+    "    cb_best = pickle.load(f)\n",
+    "cb_best['best_params']['logging_level'] = 'Silent'\n",
+    "\n",
+    "s_learner_model = SoloModel(CatBoostClassifier(**cb_best['best_params']))\n",
     "\n",
     "s_learner_pipeline = BasePipeline.BasePipeline([\n",
     "    ('hilstrom-transformer', DataTransformers.HillstromTransformer()),\n",
     "    ('slearner', s_learner_model)\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af9b3b24-b8cb-4e0c-b142-a89144b08ab0",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
+    "])\n",
     "\n",
-    "s_learner_pipeline.fit(X_train, y_train, t_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "badde541-f051-4f79-9691-c862d7ec9e7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "two_models_model = TwoModels(\n",
-    "    CatBoostClassifier(logging_level='Silent'),\n",
-    "    CatBoostClassifier(logging_level='Silent'),\n",
+    "# независимые модели\n",
+    "two_models_undepended_model = TwoModels(\n",
+    "    CatBoostClassifier(**cb_best['best_params']),\n",
+    "    CatBoostClassifier(**cb_best['best_params']),\n",
     "    method='vanilla'\n",
     ")\n",
     "\n",
-    "two_models_pipeline = BasePipeline.BasePipeline([\n",
+    "two_models_undepended_pipeline = BasePipeline.BasePipeline([\n",
     "    ('hilstrom-transformer', DataTransformers.HillstromTransformer()),\n",
-    "    ('two-models', two_models_model)\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e8bd66e-7645-4a22-bde0-eedcf1cdf707",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
+    "    ('two-models-undepended', two_models_undepended_model)\n",
+    "])\n",
     "\n",
-    "two_models_pipeline.fit(X_train, y_train, t_train)"
+    "# зависимые модели\n",
+    "two_models_depended_model = TwoModels(\n",
+    "    CatBoostClassifier(**cb_best['best_params']),\n",
+    "    CatBoostClassifier(**cb_best['best_params']),\n",
+    "    method='ddr_control'\n",
+    ")\n",
+    "\n",
+    "two_models_depended_pipeline = BasePipeline.BasePipeline([\n",
+    "    ('hilstrom-transformer', DataTransformers.HillstromTransformer()),\n",
+    "    ('two-models-depended', two_models_depended_model)\n",
+    "])\n",
+    "\n",
+    "# Трансформация классов\n",
+    "class_transform_model = ClassTransformation(\n",
+    "    CatBoostClassifier(**cb_best['best_params'])\n",
+    ")\n",
+    "\n",
+    "class_transform_pipeline = BasePipeline.BasePipeline([\n",
+    "    ('hilstrom-transformer', DataTransformers.HillstromTransformer()),\n",
+    "    ('class-transform', class_transform_model)\n",
+    "])\n",
+    "\n",
+    "# соберем словарь для скоринга\n",
+    "pipelines_unfited = {\n",
+    "    'slearner': s_learner_pipeline,\n",
+    "    'two-models-undepended': two_models_undepended_pipeline,\n",
+    "    'two-models-depended': two_models_depended_pipeline,\n",
+    "    'class-transform': class_transform_pipeline\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "421b6ae3-53f1-42c3-9922-8c87052fcd31",
+   "execution_count": 5,
+   "id": "2c4d1eee-4017-4f30-b81f-b3649fa92726",
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_w_preds = (\n",
-    "    ('s-learner', s_learner_pipeline.predict(X_test)),\n",
-    "    ('two-models', two_models_pipeline.predict(X_test))\n",
-    ")"
+    "res = scorePipelines(pipelines_unfited,\n",
+    "                     X_train, y_train,\n",
+    "                     X_test, y_test,\n",
+    "                     t_train, t_test\n",
+    "                    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2487879d-edce-4881-9cbf-43e530b20d8f",
+   "execution_count": 6,
+   "id": "f16a7875-6491-4723-b948-26253db8472d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>fit_time</th>\n",
+       "      <th>score_time</th>\n",
+       "      <th>weighted_average_uplift_test</th>\n",
+       "      <th>auqc_test</th>\n",
+       "      <th>auuq_test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>class-transform</td>\n",
+       "      <td>2.911708</td>\n",
+       "      <td>0.097244</td>\n",
+       "      <td>0.065836</td>\n",
+       "      <td>0.018426</td>\n",
+       "      <td>0.010575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>slearner</td>\n",
+       "      <td>3.180722</td>\n",
+       "      <td>0.197214</td>\n",
+       "      <td>0.065959</td>\n",
+       "      <td>0.030529</td>\n",
+       "      <td>0.017240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>two-models-undepended</td>\n",
+       "      <td>3.580388</td>\n",
+       "      <td>0.185339</td>\n",
+       "      <td>0.066015</td>\n",
+       "      <td>0.002657</td>\n",
+       "      <td>0.001662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>two-models-depended</td>\n",
+       "      <td>3.620152</td>\n",
+       "      <td>0.188890</td>\n",
+       "      <td>0.065764</td>\n",
+       "      <td>0.010999</td>\n",
+       "      <td>0.006565</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              model_name  fit_time  score_time  weighted_average_uplift_test  \\\n",
+       "3        class-transform  2.911708    0.097244                      0.065836   \n",
+       "0               slearner  3.180722    0.197214                      0.065959   \n",
+       "1  two-models-undepended  3.580388    0.185339                      0.066015   \n",
+       "2    two-models-depended  3.620152    0.188890                      0.065764   \n",
+       "\n",
+       "   auqc_test  auuq_test  \n",
+       "3   0.018426   0.010575  \n",
+       "0   0.030529   0.017240  \n",
+       "1   0.002657   0.001662  \n",
+       "2   0.010999   0.006565  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "res = upliftComparingHist(\n",
-    "    model_name_1=models_w_preds[0][0],\n",
-    "    model_predictions_1=models_w_preds[0][1],\n",
-    "    model_name_2=models_w_preds[1][0],\n",
-    "    model_predictions_2=models_w_preds[1][1]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "174b8565-f55f-44cd-8a1b-749ef63a7adc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scoreUpliftAtK(\n",
-    "    models_w_preds,\n",
-    "    y_test,\n",
-    "    t_test\n",
-    ")"
+    "res"
    ]
   },
   {
